2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Update. Adding remq, remql, remqual, regsub, *stddebug*

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	Bug #35718. Workaround good enough to get some code working.

	* eval.c (cons_find): New function.
	(expand_op): Use cons_find rather than tree_find to look for
	rest_gensym.

	* regex.c (regsub): Rearranged arguments so that the string
	is last. This is better for partial evaluaton via the op
	operator.

	* regex.h (regsub): Updated declaration.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): New intrinsic function, regsub.

	* regex.c (regsub): New function.

	* regex.h (regsub): Declared.

	* txr.1: Doc stub added.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (split_str): Separator can be a regex now.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	Version 60

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

	* txr.vim: Handle : symbol properly.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (plus): Showstopper bug: plus(bignum, fixnum)
	broken for fixnum <= 0. Bad pointer passed to MPI.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/add-mp-hash (mp_hash): Fixed use of uninitialized
	variable on platforms where the MP digit is smaller than a long integer.
	(Not anything TXR is known to run on). Changed algorithm to take the
	first and last digit and add them together, rather than just taking the
	last digit. The last digit will be zeros for numbers that contain 2 as a
	factor with a large enough multiplicity.

	* mpi-patches/add-mpi-toradix-with-case: Refreshed.

	* mpi-patches/bit-search-optimizations: Likewise.

	* mpi-patches/faster-square-root: Likewise.

	* mpi-patches/fix-bad-shifts: Likewise.

	* mpi-patches/fix-mult-bug: Likewise.

2012-03-04  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (op_defun): Bugfix: documentation says that defun supports